<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:src="@drawable/youthpick_logo"
        app:layout_constraintBottom_toTopOf="@id/tv_login_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="true"
        android:layout_marginBottom="50dp"/>
    <TextView
        android:id="@+id/tv_login_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/intro_youthpick_description"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/tv_id"
        android:layout_marginBottom="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_id"
        android:text="@string/id"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textfield_id"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label"
        app:layout_constraintBottom_toTopOf="@id/tv_pw"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="40dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/et_id"-->
<!--        android:hint="@string/put_your_id"-->
<!--        android:textSize="20sp"-->
<!--        android:layout_marginHorizontal="40dp"-->
<!--        android:layout_marginBottom="40dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintBottom_toTopOf="@id/tv_pw"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_pw"
        android:text="@string/pw"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_pw"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_pw"
        android:hint="@string/put_your_pw"
        android:textSize="20sp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        android:inputType="textPassword"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_signup"
        android:background="@drawable/btn_round"
        app:elevation="40dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_round"
        app:elevation="40dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>